# Autonomous-Driving_in_UnknownSpace

HW_ws/: camera.launch.py
HW_ws/src/auto_mapper/config/: mapper_params_online_async.yaml  nav2_params.yaml
HW_ws/src/auto_mapper/launch/: auto_mapper.launch.py  bringup_launch.py  online_async_launch.py
HW_ws/src/auto_mapper/src/: auto_mapper.cpp
HW_ws/src/robot_localization/params/: ekf.yaml
HW_ws/src/yahboom_app_save_map/yahboom_app_save_map/: yahboom_app_save_map.py
HW_ws/src/yahboom_esp32_camera/yahboom_esp32_camera/: sub_img.py
HW_ws/src/yahboom_esp32_mediapipe/yahboom_esp32_mediapipe/: control_servo.py
HW_ws/src/yahboom_esp32ai_car/yahboom_esp32ai_car/: control_shape.py  mono_Tracker.py
HW_ws/src/yahboomcar_bringup/launch/: yahboomcar_bringup_launch.py
HW_ws/src/yahboomcar_description/launch/: description_launch.py
HW_ws/src/yahboomcar_laser/yahboomcar_laser/: laser_Tracker.py  laser_Warning.py
HW_ws/src/yahboomcar_multi/launch/: map_server_launch.py
HW_ws/src/yolo_align_and_record/: package.xml  setup.cfg  setup.py
pathfinder_ws/: frames_2025-06-01_20.33.51.gv
pathfinder_ws/src/maps/: auto_map.data  auto_map.pgm  auto_map.yaml
pathfinder_ws/src/my_explorer/: package.xml  setup.py
pathfinder_ws/src/my_explorer/launch/: explore.launch.py
pathfinder_ws/src/my_explorer/my_explorer/: bs_ver0 (사본).py  bs_ver0.py  frontier_explorer.py  frontier_explorer_ver0.py  frontier_explorer_ver1.py  frontier_explorer_ver2.py  frontier_explorer_구.py  frontier_explorer_도착시업데이트.py  hybrid.py
pathfinder_ws/src/rplidar_ros/: CMakeLists.txt
(+35 files in other folders)
