<?xml version="1.0"?>
<package format="3">
  <name>my_explorer</name>
  <version>0.0.0</version>
  <description>Custom frontier exploration package</description>
  <maintainer email="bs@todo.todo">bs</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
